SET(CPACK_PACKAGE_EXECUTABLES "scrttv;scrttv" "scmv;scmv" "scolv;scolv" "scesv;scesv")

SET(Boost_DETAILED_FAILURE_MSG ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options thread filesystem iostreams regex)
IF (WIN32)
	ADD_DEFINITIONS("-DBOOST_ALL_NO_LIB")
	ADD_DEFINITIONS("-DBOOST_LIB_DIAGNOSTIC")
ENDIF (WIN32)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

IF (SC_GLOBAL_GUI_QT5)
	FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Xml)
	INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
	INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS})
	INCLUDE_DIRECTORIES(${Qt5Xml_INCLUDE_DIRS})
ELSE()
	FIND_PACKAGE(Qt4 REQUIRED)
	INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${QT_QTGUI_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${QT_QTXML_INCLUDE_DIR})
ENDIF()

SC_ADD_SUBDIRS()
