SUBDIRS(seiscomp)

SET(PACKAGE_NAME SCARDAC)

SET(${PACKAGE_NAME}_TARGET scardac)
SET(${PACKAGE_NAME}_SOURCES main.cpp scardac.cpp)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SC_ADD_EXECUTABLE(${PACKAGE_NAME} ${SCARDAC_TARGET})
SC_LINK_LIBRARIES_INTERNAL(${SCARDAC_TARGET} client daplugin)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
