SUBDIRS(libs)

SET(PACKAGE_NAME SCARDAC)

SET(${PACKAGE_NAME}_TARGET scardac)
SET(${PACKAGE_NAME}_SOURCES main.cpp scardac.cpp)

INCLUDE_DIRECTORIES(libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)

SC_ADD_EXECUTABLE(${PACKAGE_NAME} ${SCARDAC_TARGET})
SC_LINK_LIBRARIES_INTERNAL(${SCARDAC_TARGET} client daplugin)

SET(SC3_PACKAGE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
