SUBDIRS(plugins)

SET(PACKAGE_NAME SYNC_FDSNXML)
SET(APP_NAME fdsnxml2inv)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/fdsnxml/CMakeLists.generated)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(${PACKAGE_NAME}_SOURCES
	${DATAMODEL_GENERATED_SOURCES}
	convert2fdsnxml.cpp
	convert2sc.cpp
	main.cpp
)

SC_ADD_EXECUTABLE(${PACKAGE_NAME} ${APP_NAME})
SC_LINK_LIBRARIES_INTERNAL(${APP_NAME} client)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
