SET(SCEVENT_EVENTTYPEPLUGIN_SOURCES scevent_eventtype.cpp)
SC_ADD_PLUGIN_LIBRARY(SCEVENT_EVENTTYPEPLUGIN evtype scevent)
SC_LINK_LIBRARIES_INTERNAL(evtype evplugin client)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
